# autopass-kanban

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DOCKER_HOWTO.md  Dockerfile  Dockerfile.kanban  HOWTO.md  README.md  docker-compose.bash.sh  docker-compose.kanban.yml  docker-compose.up.sh  docker-compose.yml  entrypoint.sh  kanban  kb  package.json
.agents/skills/: kanban-backlog-maintainer  kanban-developer
.github/workflows/: release.yml
.kanban/: paths.json  settings.json  story-points.json  theme.json  web.json
container/: Dockerfile.kanban  HOWTO.md  docker-compose.bash.sh  docker-compose.kanban.yml  docker-compose.up.sh  kanban
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  completion.rs  doctor_cli.rs  json_out.rs  layout.rs  main.rs  ops.rs  prompt.rs  self_manage.rs  theme.rs  web.rs
crates/cli/src/render/: common.rs  epic.rs  inline.rs  markdown.rs  mod.rs  phase.rs  progress.rs  sprint.rs  story.rs  table.rs
crates/cli/tests/: completion.rs  git_repository_requirement.rs  json_output.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  constants.rs  doctor.rs  epic.rs  error.rs  json.rs  lib.rs  lock.rs  markdown.rs  model.rs  phase.rs  repository.rs  sprint.rs  story.rs  testutil.rs  util.rs  validate.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
crates/web/: Cargo.toml
crates/web-server/: Cargo.toml  build.rs
crates/web-server/src/: dto.rs  lib.rs  metrics.rs  snapshot.rs  sprint_io.rs  team.rs
crates/web-server/src/handlers/: mod.rs
crates/web-server/src/metrics/: tests.rs
crates/web/src/: main.rs
delivery/backlog/: EP-001-installability.md  EP-002-github-release-distribution.md  EP-003-codebase-hardening-and-architecture-remediation.md  EP-003-stories-by-complexity.md  SPEC-installability.md  US-001-local-binary-install.md  US-001-local-binary-install.tasks.md  US-002-agent-skills-install.md  US-002-agent-skills-install.tasks.md  US-003-idempotent-upgrade.md  US-003-idempotent-upgrade.tasks.md  US-004-clean-uninstall.md  US-004-clean-uninstall.tasks.md  US-005-remote-curl-install.md  US-005-remote-curl-install.tasks.md  US-006-checksum-verified-release-artifacts.md  US-006-checksum-verified-release-artifacts.tasks.md  US-007-github-actions-release-artifacts.md  US-007-github-actions-release-artifacts.tasks.md  US-008-path-containment-for-task-file-and-doctor-writes.md  US-008-path-containment-for-task-file-and-doctor-writes.tasks.md  US-009-disable-symlink-following-in-repository-walk.md  US-009-disable-symlink-following-in-repository-walk.tasks.md  US-010-pin-and-verify-upgrade-install-script.md  US-010-pin-and-verify-upgrade-install-script.tasks.md  US-011-detect-eof-and-tty-in-interactive-prompts.md  US-011-detect-eof-and-tty-in-interactive-prompts.tasks.md  US-012-atomic-markdown-writes-via-temp-file-and-rename.md  US-012-atomic-markdown-writes-via-temp-file-and-rename.tasks.md  US-013-advisory-file-lock-for-read-modify-write-sequences.md  US-013-advisory-file-lock-for-read-modify-write-sequences.tasks.md  US-014-csrf-protection-for-web-server-mutation-endpoints.md  US-014-csrf-protection-for-web-server-mutation-endpoints.tasks.md  US-015-verify-process-identity-before-signalling-in-web-stop.md  US-015-verify-process-identity-before-signalling-in-web-stop.tasks.md  US-016-stop-leaking-absolute-paths-in-web-error-responses.md  US-016-stop-leaking-absolute-paths-in-web-error-responses.tasks.md  US-017-validate-sprint-name-segment-before-filesystem-join.md  US-017-validate-sprint-name-segment-before-filesystem-join.tasks.md  US-018-single-source-of-truth-for-status-names.md  (+34 more)
delivery/decisions/: ADR-001-advisory-locking-model.md  ADR-002-upgrade-trust-root.md
scripts/: install.sh  install.sh.sha256  test_wbs_report.py  uninstall.sh  wbs_report.py
scripts/release/: checksums.sh
scripts/windows-startup-scripts/: kanban-web.cmd  kanban-web.ps1
skills/kanban-backlog-maintainer/: SKILL.md  plugin.json
skills/kanban-developer/: SKILL.md  kanban-backlog-maintainer  plugin.json
templates/: README.md  TEMPLATE-epic-en.md  TEMPLATE-user-story-en.md
tests/install/: stub-kanban  test_install.sh
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/shared/: dates.ts  types.ts
web/src/: main.tsx
web/src/api/: client.test.ts  client.ts  hooks.test.tsx  hooks.ts
web/src/components/: AppShell.tsx  GitPullButton.test.tsx  GitPullButton.tsx  PhaseBreakdown.tsx  (+7 more)
(+21 files in other folders)
