[workspace]
members = [
  "crates/core",
  "crates/cli",
  "crates/tui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
version = "26.6.801"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = true }
clap = { version = "4.5.53", features = ["derive", "wrap_help"] }
clap_complete = "4.5.61"
libc = "0.2.186"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
walkdir = "2.5.0"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
