[workspace]
members = [
  "crates/core",
  "crates/cli",
  "crates/web-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
version = "26.6.2501"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
chrono = { version = "0.4.42", default-features = true }
clap = { version = "4.5.53", features = ["derive", "wrap_help"] }
clap_complete = "4.5.61"
futures = "0.3.31"
fs4 = "0.12.0"
include_dir = "0.7.4"
libc = "0.2.186"
mime_guess = "2.0.5"
notify = "8.2.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
walkdir = "2.5.0"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
