[package]
name = "kanban-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "kanban"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
kanban-core = { path = "../core" }
kanban-web-server = { path = "../web-server" }
clap.workspace = true
clap_complete.workspace = true
chrono.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tempfile.workspace = true
