[package]
name = "kanban-web-server"
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
include_dir.workspace = true
kanban-core = { path = "../core" }
mime_guess.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
